--- a/GuilhermeVieira_ViniciusNogueira/nbproject/private/private.properties
+++ b/GuilhermeVieira_ViniciusNogueira/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/guilherme/.netbeans/8.1/build.properties
+user.properties.file=/home/2013.1.08.038/.netbeans/8.2/build.properties
